--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@ input:focus {
     }
     .nav {
         padding: 20px 0 0 15px !important;
+        position: fixed !important;
         height: 60px;
         box-shadow: 3px 3px 3px #f0f1f1;
         background-color: #fff;
