--- a/style.css
+++ b/style.css
@@ -356,7 +356,10 @@ input:focus {
         text-align: center
     }
     .top {
-        margin: 40px 0 0 0 !important;
+        margin: 120px 0 0 0 !important;
+    }
+    .one {
+        margin: 50px 0 0 0;
     }
     .title {
         font-size: 25px;
